MERGED from /branches/features/uri-for-resources. Use persistence_1_0.xsd instead of persistence_2_0.xsd for the unit tests.